--- a/src/lib/ololord_static_js.qrc
+++ b/src/lib/ololord_static_js.qrc
@@ -10,5 +10,6 @@
         <file>static/js/base.js</file>
         <file>static/js/base_board.js</file>
         <file>static/js/rpg_base.js</file>
+        <file>static/js/playlist.js</file>
     </qresource>
 </RCC>
