--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -265,5 +265,7 @@
         <file>static/img/video_ogg_logo.png</file>
         <file>static/img/video_webm_logo.png</file>
         <file>static/img/add.png</file>
+        <file>static/img/playlist_add.png</file>
+        <file>static/img/playlist_delete.png</file>
     </qresource>
 </RCC>
