--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -134,6 +134,11 @@
                title="<%= findSourceWithIqdbText %>" target="_blank">
                 <img src="/<%= sitePathPrefix %>img/iqdb.png"></a>
         <% end %>
+        <% if ( content.isAudioType(file.type) ) %>
+            <a href="javascript:lord.addToPlaylist('<%= currentBoard.name %>', '<%= file.sourceName %>');"
+               title="<%= addToPlaylistText %>">
+                <img src="/<%= sitePathPrefix %>img/playlist_add.png"></a>
+        <% end %>
     </div>
     <div class="postFileFile">
         <a href="/<%= sitePathPrefix %><%= currentBoard.name %>/<%= file.sourceName %>"
@@ -454,6 +459,7 @@
 <input type="hidden" id="collapseVideoText" value="<%= collapseVideoText %>" />
 <input type="hidden" id="expandVideoText" value="<%= expandVideoText %>" />
 <input type="hidden" id="youtubeApiKey" value="<%= youtubeApiKey %>" />
+<input type="hidden" id="addToPlaylistText" value="<%= addToPlaylistText %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <%foreach board in availableBoards %>
         <% item %>
