--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -267,5 +267,6 @@
         <file>static/img/add.png</file>
         <file>static/img/playlist_add.png</file>
         <file>static/img/playlist_delete.png</file>
+        <file>static/img/favorite.png</file>
     </qresource>
 </RCC>
