--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -167,17 +167,9 @@
 
 <% template post(Content::Post post, Content::Board::ThreadPointer thread) %>
 <% if ( post.number == post.threadNumber ) %>
-    <% if ( post.hidden ) %>
-        <div id="post<%= post.number %>" class="opPost hiddenPost">
-    <% else %>
-        <div id="post<%= post.number %>" class="opPost">
-    <% end %>
+    <div id="post<%= post.number %>" class="opPost">
 <% else %>
-    <% if ( post.hidden ) %>
-        <div id="post<%= post.number %>" class="post hiddenPost">
-    <% else %>
-        <div id="post<%= post.number %>" class="post">
-    <% end %>
+    <div id="post<%= post.number %>" class="post">
 <% end %>
     <div class="postHeader">
         <% if ( !thread ) %>
@@ -301,27 +293,9 @@
         <% else %>
             <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deletePostText %>" /></a>
         <% end %>
-        <% if ( post.number == post.threadNumber ) %>
-            <% if ( (thread && thread->hidden) || (!thread && dynamic_cast<Content::Thread *>(&content)->hidden) ) %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:lord.setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% else %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:lord.setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% end %>
-        <% else %>
-            <% if ( post.hidden ) %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:lord.setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% else %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:lord.setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% end %>
-        <% end %>
+        <a name="hideButton" id="hidePost<%= post.number %>"
+           href="javascript:lord.setPostHidden('<%= currentBoard.name %>', '<%= post.number %>');">
+            <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
         <% if ( thread && post.number == post.threadNumber ) %>
             [<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/thread/<%= post.number %>.html"><%= toThread %></a>]
             <% if ( thread->postLimitReached() ) %>
@@ -467,6 +441,7 @@
 <input type="hidden" id="captchaQuotaText" value="<%= captchaQuotaText %>" />
 <input type="hidden" id="postFormButtonSubmit" value="<%= postFormButtonSubmit %>" />
 <input type="hidden" id="postFormButtonSubmitSending" value="<%= postFormButtonSubmitSending %>" />
+<input type="hidden" id="postFormButtonSubmitWaiting" value="<%= postFormButtonSubmitWaiting %>" />
 <input type="hidden" id="collapseVideoText" value="<%= collapseVideoText %>" />
 <input type="hidden" id="expandVideoText" value="<%= expandVideoText %>" />
 <input type="hidden" id="youtubeApiKey" value="<%= youtubeApiKey %>" />
@@ -543,7 +518,7 @@
                href="javascript:lord.deletePost('<%= currentBoard.name %>', %postNumber%, true);">
                 <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deletePostText %>" /></a>
             <a id="hidePost%postNumber%" name="hideButton"
-               href="javascript:lord.setPostHidden('<%= currentBoard.name %>', %postNumber%, %hide%);">
+               href="javascript:lord.setPostHidden('<%= currentBoard.name %>', %postNumber%);">
                 <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
             <span name="toThread" style="display: none;">
                 [<a name="toThreadLink"
@@ -690,7 +665,7 @@
 <% end %>
 <div id="hiddenPostForm" style="display: none;">
     <form id="postForm" method="post" accept-charset="utf-8" action="/<%= sitePathPrefix %>action/<%= action %>"
-          enctype="multipart/form-data" onsubmit="return lord.submitted(this);">
+          enctype="multipart/form-data" onsubmit="return lord.submitted(event, this);">
         <input type="hidden" value="<%= currentBoard.name %>" name="board" />
         <% if ( content.currentThread > 0 ) %>
             <input type="hidden" value="<%= currentThread %>" name="thread" />
