Show addititonal information about media files

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -125,7 +125,7 @@
         <a href="/<%= sitePathPrefix %><%= currentBoard.name %>/<%= file.sourceName %>"
            target="_blank"><%= file.sourceName %></a>
     </div>
-    <div class="postFileSize">
+    <div class="postFileSize" title="<%= file.sizeTooltip %>">
         (<%= file.size %>)
     </div>
     <div class="postFileSearch">
