--- a/src/lib/ololord_static_video.qrc
+++ b/src/lib/ololord_static_video.qrc
@@ -4,5 +4,6 @@
         <file>static/video/friendship_is_magic_2.webm</file>
         <file>static/video/bombanoolow.webm</file>
         <file>static/video/fail.webm</file>
+        <file>static/video/friendship_is_magic_3.webm</file>
     </qresource>
 </RCC>
