Add Futaba style

--- a/src/lib/ololord_static_css.qrc
+++ b/src/lib/ololord_static_css.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>static/css/photon.css</file>
+        <file>static/css/futaba.css</file>
     </qresource>
 </RCC>
