--- a/src/lib/template/playlist.tmpl
+++ b/src/lib/template/playlist.tmpl
@@ -15,6 +15,7 @@
     </head>
     <body>
         <% include baseTexts() %>
+        <input type="hidden" id="downloadPlaylistFileText" value="<%= downloadPlaylistFileText %>" />
         <input type="hidden" id="removeFromPlaylistText" value="<%= removeFromPlaylistText %>" />
         <input type="hidden" id="unknownAlbumText" value="<%= unknownAlbumText %>" />
         <input type="hidden" id="unknownArtistText" value="<%= unknownArtistText %>" />
