--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -422,6 +422,23 @@ span.spoiler:hover a {
     filter: alpha(opacity=100);
 }
 
+.postActions > a {
+    display: none;
+}
+
+.postActions > img {
+    opacity: 0.65;
+    filter: alpha(opacity=65);
+}
+
+.postActions:hover > a {
+    display: inline;
+}
+
+.postActions:hover > img {
+    display: none;
+}
+
 .threadPost {
     horizontal-align: left;
 }
