--- a/src/lib/template/home.tmpl
+++ b/src/lib/template/home.tmpl
@@ -10,6 +10,7 @@
     </head>
     <body>
         <% include baseTexts() %>
+        <% include customHeader() %>
         <% include settings() %>
         <br />
         <% include navbar() %>
@@ -66,6 +67,7 @@
                 </ul>
             </div>
         <% end %>
+        <% include customFooter() %>
     </body>
 </html>
 <% end template %>
