--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -10,6 +10,7 @@
     </head>
     <body>
         <% include baseTexts() %>
+        <% include customHeader() %>
         <% include settings() %>
         <br />
         <% include navbar() %>
@@ -165,6 +166,7 @@
                 </tr>
             </table>
         </div>
+        <% include customFooter() %>
     </body>
 </html>
 <% end template %>
