--- a/src/lib/template/ban.tmpl
+++ b/src/lib/template/ban.tmpl
@@ -10,6 +10,7 @@
     </head>
     <body>
         <% include baseTexts() %>
+        <% include customHeader() %>
         <% include settings() %>
         <br />
         <% include navbar() %>
@@ -66,6 +67,7 @@
                 <% end %>
             </table>
         </div>
+        <% include customHeader() %>
     </body>
 </html>
 <% end template %>
