--- a/src/lib/template/not_found.tmpl
+++ b/src/lib/template/not_found.tmpl
@@ -10,6 +10,7 @@
     </head>
     <body>
         <% include baseTexts() %>
+        <% include customHeader() %>
         <% include settings() %>
         <br />
         <% include navbar() %>
@@ -21,6 +22,7 @@
         <div class="theImage">
             <img src="/<%= sitePathPrefix %>img/<%= imageFileName %>" title="<%= imageTitle %>">
         </div>
+        <% include customFooter() %>
     </body>
 </html>
 <% end template %>
