--- a/src/lib/template/rules.tmpl
+++ b/src/lib/template/rules.tmpl
@@ -10,6 +10,7 @@
     </head>
     <body>
         <% include baseTexts() %>
+        <% include customHeader() %>
         <% include settings() %>
         <br />
         <% include navbar() %>
@@ -35,6 +36,7 @@
             <% end %>
             </ol>
         </div>
+        <% include customFooter() %>
     </body>
 </html>
 <% end template %>
